[project]
name = "repro-azure-dependency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.23.1",
    "azure-storage-blob>=12.26.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-unstructured>=0.1.6",
    "unstructured[pdf]>=0.18.9",
]
